fix regsters
