# server/api/controllers/auth/authRouter.js
@@ -5,5 +5,6 @@ import AuthMiddleware from '../../middlewares/auth';
 
 export default express
     .Router()
+    .post('/register', AuthController.registerUser)
     .post('/', AuthController.logIn)
     .get('/', AuthMiddleware.validateToken)
