# server/common/api.yml
@@ -60,7 +60,7 @@ definitions:
       - username
       - password
       - email
-      - roleId
+      - rolesId
     properties:
       username:
         type: string
@@ -370,11 +370,11 @@ paths:
       responses:
         200:
           description: OK
-  
-  /users:
+
+  /auth/register:
     post:
       tags:
-        - Users
+        - Auth
       # summary: Create a new user
       summary: resgister and add new user
       consumes:
@@ -394,7 +394,8 @@ paths:
           $ref: '#/responses/Unauthorized'
         404:
           $ref: '#/responses/NotFound'
-    
+  
+  /users:  
     get:
       summary: Fetch all users
       tags:
